--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "firebase-admin": "^12.3.0",
+    "form-data": "^4.0.0",
+    "google-auth-library": "^9.11.0",
+    "googleapis": "^140.0.1",
+    "openai": "^4.53.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK"
