--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "form-data": "^4.0.0",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
+    "got": "^14.4.2",
     "openai": "^4.53.1",
     "reflect-metadata": "^0.2.0",
+    "request": "^2.88.2",
     "rxjs": "^7.8.1",
     "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK"
   },
