--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.2",
+    "botbuilder": "^4.22.3",
+    "botbuilder-dialogs": "^4.22.3",
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.3.0",
     "form-data": "^4.0.0",
@@ -34,7 +36,8 @@
     "reflect-metadata": "^0.2.0",
     "request": "^2.88.2",
     "rxjs": "^7.8.1",
-    "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK"
+    "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK",
+    "xstate": "^5.17.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
