--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@directus/sdk": "^16.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -33,6 +34,7 @@
     "googleapis": "^140.0.1",
     "got": "^14.4.2",
     "openai": "^4.53.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "request": "^2.88.2",
     "rxjs": "^7.8.1",
