--- a/package.json
+++ b/package.json
@@ -25,21 +25,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.2",
-    "botbuilder": "^4.22.3",
-    "botbuilder-dialogs": "^4.22.3",
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.3.0",
     "form-data": "^4.0.0",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
     "got": "^14.4.2",
-    "openai": "^4.53.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "request": "^2.88.2",
-    "rxjs": "^7.8.1",
-    "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK",
-    "xstate": "^5.17.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
