--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "form-data": "^4.0.0",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
-    "got": "^14.4.2",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+     "whatsapp": "github:GabrielBragaGit/WhatsApp-Nodejs-SDK"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
