--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,8 @@ services:
       MAX_RETRIES_AFTER_WAIT: 3 // ou une autre valeur appropriée
       REQUEST_TIMEOUT: 5000
 
+    ports:
+      - ${LISTENER_PORT}:${LISTENER_PORT}
 
 
 # The commented out section below is an example of how to define a PostgreSQL
