--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.3.0",
     "form-data": "^4.0.0",
