--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase-admin": "^12.3.0",
     "form-data": "^4.0.0",
-    "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
@@ -38,10 +38,8 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
     "@types/node": "^22.2.0",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
@@ -49,14 +47,9 @@
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
   "jest": {
